--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2.50"
-rand = "0.7.0"
+js-sys = "0.3.27"
+
+[profile.release]
+opt-level = 's'
