--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
     "build": "webpack",
-    "serve": "webpack-dev-server"
+    "serve": "webpack-dev-server -d"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "copy-webpack-plugin": "^5.0.4",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
