--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "scripts": {
     "build": "webpack",
-    "serve": "webpack-dev-server -d"
+    "serve": "webpack-dev-server -d --open"
   },
   "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "^1.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "@wasm-tool/wasm-pack-plugin": "^1.3.1",
+    "copy-webpack-plugin": "^5.1.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
